# aws-fin-ops-chatbot

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.mcp  Procfile.mcp  README.md  billing_server.py  chainlit-config.toml  chainlit.md  chainlit_en-US.md  config.toml  docker-compose.yml  localstack-s3-setup.sh  prisma.Dockerfile  pyproject.toml  requirements.mcp.txt  requirements.txt
aws-fin-ops-chatbot/: Dockerfile  README.md  chainlit-config.toml  docker-compose.yml  pyproject.toml
aws-fin-ops-chatbot/docs/: README.md  langgraph_implementation_and_workflow.md  langgraph_migration.md  langgraph_prototype.md  langgraph_tooling.md
aws-fin-ops-chatbot/public/: custom.css
aws-fin-ops-chatbot/scripts/: start-mcp-server.sh
aws-fin-ops-chatbot/src/: app.py  azure_openai_client.py  guardrails.py  langgraph_app.py  mcp_tool_helper.py  response_utils.py  tool_utils.py
aws-fin-ops-chatbot/tests/: reproduce_regex.py  test_guardrails.py  test_response_utils.py
docs/: EXTENDED_README.md  README.md  available_mcp_tools.md  langgraph.md  langgraph_tooling.md
public/: custom.css
scripts/: aws_billing_server.py  signup.py  start-mcp-server.sh
secrets/: azure-openai.env.example  chainlit.env.example  guardrails.env.example  langgraph.env.example  llm.env.example  mcp-servers.env.example
src/: app.py  auth_manager.py  azure_openai_client.py  chatclient.py  date_utils.py  guardrails.py  langgraph_azure_open_ai_client.py  langgraph_base_client.py  langgraph_client.py  langgraph_ollama_client.py  mcp_tool_helper.py  mcp_utils.py  session_store.py
tests/: verify_regex.py
