[project]
name = "aws-finops-chatbot"
version = "0.1.0"
requires-python = ">= 3.13"
readme = "README.md"

dependencies = [
  "chainlit == 2.9.0",
  "openai == 2.8.1",
  "mcp == 1.21.0",
  "aiohttp == 3.13.2",
  "redis == 7.0.1",
  "bcrypt == 5.0.0",
  "asyncpg == 0.30.0",
  "boto3 == 1.40.74",
  "langgraph == 1.0.3",
  "langchain-core >= 1.2.21",
  "langchain-openai >= 1.0.2",
  "langchain-mcp-adapters == 0.1.14",
  "langchain-ollama == 1.1.0"
]

[dependency-groups]
dev = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
pythonpath = ["src"]
