[project]
name = "AwsFinOpsBot"
version = "0.1.0"
requires-python = ">= 3.13"
readme = "README.md"

dependencies = [
  "chainlit == 2.9.0",
  "openai == 2.7.2",
  "mcp == 1.21.0",
  "aiohttp == 3.13.2",
  "redis == 7.0.1",
  "bcrypt == 5.0.0",
  "asyncpg == 0.30.0",
  "boto3 == 1.40.74"
]

[tool.uv]
dev-dependencies = ["pytest", "pytest-asyncio"]
